# problock

./: LICENSE  docker-compose.sample.yml
backend/: .gitignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
backend/src/: masonite
backend/tests/: test_problock.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: App.js  Board.js  BoardConfig.js  HeaderMenu.js  Tile.js  TileConfig.js  TilePropertyNeighbours.js  TilesConfig.js
frontend/src/features/board/: BoardSlice.js
frontend/src/features/error/: ErrorSlice.js
frontend/src/features/tiles/: TileSlice.js  TilesSlice.js
frontend/src/features/ui/: UISlice.js
frontend/src/reducers/: index.js
