[tool.poetry]
name = "problock"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]
packages = [
    { include = "app", from = "src" },
    { include = "bootstrap", from = "src" },
    { include = "config", from = "src" },
    { include = "resources", from = "src" },
    { include = "routes", from = "src" },
    { include = "wsgi.py", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
masonite = ">=2.3,<2.4"
masonite-logging = ">=1.0,<2.0"
masonite-validation = ">=3.0,<4.0"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
prospector = "^1.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
